fix(editor): Add sticky to bottom editor when out of view (#12981)
* fix(editor): correct row offset calculation in translation editor

The logic used to the calculate scroll offset based on the closest tbody tag which is fine unless the space between them is very large (like in issue #3507) which hides the translation input. As a fix we calculate based on a closer element that can't grow in height very much to hide the translation input.

* feat(editor): implement sticky bottom feature for translation editor

* fix(editor): update sticky button from an id to a class

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2176,6 +2176,7 @@ tbody.warning {
   width: 50%;
 }
 
+/* START: Shortcuts table styles */
 #shortcuts-table-container {
   max-height: 60vh;
   overflow-y: auto;
@@ -2188,7 +2189,9 @@ tbody.warning {
 #shortcuts-table-container kbd {
   color: unset;
 }
+/* END: Shortcuts table styles */
 
+/** START: Search Previewe styles */
 #search-preview {
   display: none;
   width: 100%;
@@ -2227,6 +2230,27 @@ tbody.warning {
   color: #1fa385;
   margin: 10px;
 }
+/** END: Search Previewe styles */
+
+/** START: Zen Editor sticky bottom styles */
+.sticky-bottom {
+  position: sticky;
+  bottom: 0;
+  background-color: white;
+  z-index: 1000;
+}
+
+.hide-sticky {
+  display: none;
+  position: absolute;
+  top: -30%;
+  right: 0;
+}
+
+.sticky-bottom .hide-sticky {
+  display: block !important;
+}
+/** END: Zen Editor sticky bottom styles */
 
 .panel {
   border-radius: var(--border-radius);
